[package]
name = "hedgehog-rs"
version = "0.1.5"
authors = ["vaperion <vaperion@riseup.net>"]
description = "A simple Rust library for interacting with the Posthog API."
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/villainwtf/hedgehog"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12.4", features = ["json", "gzip"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4"] }
